@@ -32,6 +32,7 @@ Permitir definir Alt Izq, Ctrl Izq, Shift Izq o TAB como acción de Fuego de Joy
 Permitir cambiar posicion de lectura actual en Visor de Cinta de Entrada para archivos .tap
 Permitir cargar rom de 8kb en ZX80 (por ejemplo la rom del ZX81, como un ZX80 actualizado a ZX81)
 Permitir aumentar sprites en View Sprites
+Agregado tipo de medidor Esfera en Ver Sensores
 Mejorada compilación: opciones --enable-memptr --enable-visualmem --enable-cpustats están activadas por defecto en ./configure
 Mejorada emulación del Inves Spectrum+: alertar cuando un juego puede resetearse debido al bug de Inves de write-on-interrupt
 Mejorado el core de emulación de Spectrum de la CPU Z80: agregado estado wait (necesario para emular el microdrive)
